--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(printf)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(printf
-        ft_printf.c)
+add_executable(ft_printf
+        ft_printf.c ft_printf.h parser.c)
