print_numbers done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,4 +77,4 @@ add_executable(ft_printf
         ft_printf.h
         parser.c
 
-        )
+        print_numbers.c print_strings.c print_nbr_conversions.c)
