fixed length, add width taken from argumet, fixed makefile (add libft o-files to libftprintf.a)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,4 +75,6 @@ add_executable(ft_printf
         srcs/print_nbr_conversions.c
         main.c
         srcs/print_strings.c
-        srcs/print.c srcs/print_hex_nb.c srcs/get_conv_f.c)
+        srcs/print.c
+        srcs/print_hex_nb.c
+        srcs/get_conv_f.c)
